--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-/target/
+# ignore all bin directories
+# matches "bin" in any subfolder
+bin/
+
+# ignore all target directories
+target/
+
+# ignore all files ending with ~
+*~ 
+
+.settings/
+
+.project
+
+.classpath
