--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=nied
 spring.datasource.password=alipia
 spring.datasource.driverClassName=oracle.jdbc.pool.OracleDataSource
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.show_sql=true
+security.basic.enabled=false
